# sleap

./: .buildinfo  .codespellrc  .coveragerc  .coveralls.yml  .gitignore  AUTHORS  Anaconda3-2023.04-MacOSX-x86_64.sh  CNAME  CODE_OF_CONDUCT.html  CONTRIBUTING.html  Converting_SLEAP_Analysis_HDF5_to_CSV_Updated.ipynb  LICENSE  MANIFEST.in  README.md  README.rst  api.html  appveyor.yaml  appveyor.yml  codecov.yml  conda_requirements.txt  condaenv.25edtblj.requirements.txt  dataset.html  datasets.html  dev_requirements.txt  environment.yaml  environment.yml  environment_apple_silicon.yml  environment_appveyor.yml  environment_build.yml  environment_hackathon.yml  environment_m1.yml  environment_mac.yml  environment_no_cuda.yml  environment_pypi.yaml  environment_pypi.yml  faq.html  genindex.html  gui.html  help.html  howtos.html  (+36 more)
.conda/: README.md  bld.bat  build.sh  conda_build_config.yaml  condarc.yaml  meta.yaml  sleap_activate.bat  sleap_activate.sh  sleap_deactivate.bat  sleap_deactivate.sh
.conda-cpu/: bld.bat  cpu-req.patch  meta.yaml
.conda_apple_silicon/: README.md  build.sh  meta.yaml
.conda_m1/: README.md  build.sh  conda_build_config.yaml  meta.yaml
.conda_mac/: README.md  build.sh  condarc.yaml  meta.yaml  sleap_activate.sh  sleap_deactivate.sh
.github/: PULL_REQUEST_TEMPLATE.md
_autosummary/: sleap.diagnostic.html  sleap.gui.app.html  sleap.gui.color.html  sleap.gui.commands.html  sleap.gui.dataviews.html  sleap.gui.dialogs.delete.html  sleap.gui.dialogs.export_clip.html  sleap.gui.dialogs.filedialog.html  sleap.gui.dialogs.formbuilder.html  sleap.gui.dialogs.importvideos.html  sleap.gui.dialogs.merge.html  sleap.gui.dialogs.message.html  sleap.gui.dialogs.metrics.html  sleap.gui.dialogs.missingfiles.html  sleap.gui.dialogs.shortcuts.html  sleap.gui.learning.configs.html  sleap.gui.learning.datagen.html  sleap.gui.learning.dialog.html  sleap.gui.learning.receptivefield.html  sleap.gui.learning.runners.html  sleap.gui.learning.scopedkeydict.html  sleap.gui.learning.training.html  sleap.gui.learning.utils.html  sleap.gui.overlays.anchors.html  sleap.gui.overlays.base.html  sleap.gui.overlays.confmaps.html  sleap.gui.overlays.instance.html  sleap.gui.overlays.pafs.html  sleap.gui.overlays.tracks.html  sleap.gui.release_checker.html  sleap.gui.shortcuts.html  sleap.gui.state.html  sleap.gui.suggestions.html  sleap.gui.widgets.imagedir.html  sleap.gui.widgets.mpl.html  sleap.gui.widgets.multicheck.html  sleap.gui.widgets.slider.html  sleap.gui.widgets.video.html  sleap.info.align.html  sleap.info.feature_suggestions.html  (+79 more)
_modules/: index.html
_sources/: api.rst  api.rst.txt  dataset.rst.txt  gui.rst.txt  help.md.txt  howtos.rst.txt  index.rst  index.rst.txt  inference.rst.txt  installation.md  installation.md.txt  installation.rst.txt  misc.rst.txt  overview.rst.txt  reference.rst.txt  remote.rst.txt  tutorial-part2.rst.txt  tutorial.rst.txt
_static/: alabaster.css  documentation_options.js  pygments.css
api/: sleap.info.align.html  sleap.info.feature_suggestions.html  sleap.info.labels.html  sleap.info.metrics.html  sleap.info.summary.html  sleap.info.trackcleaner.html  sleap.info.write_tracking_h5.html  sleap.instance.html  sleap.io.asyncvideo.html  sleap.io.convert.html  sleap.io.dataset.html  sleap.io.format.adaptor.html  sleap.io.format.alphatracker.html  sleap.io.format.coco.html  sleap.io.format.deeplabcut.html  sleap.io.format.deepposekit.html  sleap.io.format.dispatch.html  sleap.io.format.filehandle.html  sleap.io.format.genericjson.html  sleap.io.format.hdf5.html  sleap.io.format.labels_json.html  sleap.io.format.leap_matlab.html  sleap.io.format.main.html  sleap.io.format.ndx_pose.html  sleap.io.format.nix.html  sleap.io.format.sleap_analysis.html  sleap.io.format.text.html  sleap.io.legacy.html  sleap.io.pathutils.html  sleap.io.video.html  sleap.io.videowriter.html  sleap.io.visuals.html  sleap.message.html  sleap.nn.architectures.common.html  sleap.nn.architectures.encoder_decoder.html  sleap.nn.architectures.hourglass.html  sleap.nn.architectures.hrnet.html  sleap.nn.architectures.leap.html  sleap.nn.architectures.pretrained_encoders.html  sleap.nn.architectures.resnet.html  (+44 more)
config/: shortcuts.yaml
data/: videos.slp
develop/: .buildinfo  CODE_OF_CONDUCT.html  CONTRIBUTING.html  about.html  api.html  bulletin.html  datasets.html  genindex.html  getting_started.html  help.html  index.html  installation.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog.md  ISSUE_TEMPLATE.md  Makefile  Skeleton.rst  about.rst  api.rst  bulletin.json  bulletin.md  conf.py  dataset.rst  datasets.md  faq.rst  gui.rst  help.md  howtos.rst  index.rst  installation.md  installation.rst  instance.rst  make.bat  make_api_doctree.py  make_bulletin_json.py  misc.rst  overview.rst  predictions.analysis.h5  reference.rst  skeleton.rst  training.rst  tutorial-part2.rst  tutorial.rst  utils.py  video.rst
guides/: choosing-models.html  cli.html  colab.html  custom-training.html  gui.html  index.html  installation.html  merging.html  proofreading.html  reference.html  remote.html  skeleton-design.html  skeletons.html  training-package.html  training.html  troubleshooting-workflows.html
leap/: instance.py  skeleton.py
main/: index.html  search.html
notebooks/: Analysis_examples.html  Data_structures.html  Interactive_and_realtime_inference.html  Interactive_and_resumable_training.html  Model_evaluation.html  Post_inference_tracking.html  Training_and_inference_on_an_example_dataset.html  Training_and_inference_using_Google_Drive.html  Training_with_custom_hyperparameters.html  index.html
sleap/: __init__.py  diagnostic.py  instance.py  message.py  prefs.py  rangelist.py  skeleton.py  util.py  version.py
tests/: conftest.py  test_instance.py  test_message.py  test_point_array.py  test_prefs.py  test_rangelist.py  test_skeleton.py  test_util.py  test_version.py
training_profiles/: default_pafs.json
tutorials/: analysis.html  assisted-labeling.html  initial-labeling.html  (+4 more)
(+1129 files in other folders)
